prototypes/p5a/tests/invalid/16_use_before_open.hll
// MUST BE REJECTED: connect not called before send

state Connection {
    Disconnected {
        function connect() -> Connected
    }
    Connected {
        function send() -> Connected
        function disconnect() -> Closed
    }
    Closed { }
}

function main() {
    let conn = Connection.new()
    conn.send()  // ERROR: send not available in state Disconnected
}
